tests/snapshots/examples_fixtures/type_system__failing__03_runtime_return_violation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/03_runtime_return_violation.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The return value of `bad` does not match its declared return type.

  --> examples/type_system/failing/03_runtime_return_violation.flx:2:5
  |
1 | fn bad() -> Int {

  |             --- `bad` was declared to return `Int`
2 |     "not-an-int"
  |     ^^^^^^^^^^^^
  |     ------------ this expression has type `String`

Help:
  Return a `Int` value from `bad` or change the declared return type.
== stdout ==
<not executed>
